Update Exam 1 Study Shortlist.html

--- a/Exam 1 Study Shortlist.html
+++ b/Exam 1 Study Shortlist.html
@@ -13068,14 +13068,14 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="MEEN-382-Exam-1-Study-Shortlist"><div style="text-align: center;"><u>MEEN 382 Exam 1 Study Shortlist</u></div><a class="anchor-link" href="#MEEN-382-Exam-1-Study-Shortlist">¶</a></h1>
+<h1 id="ELET-270-Exam-1-Study-Shortlist"><div style="text-align: center;"><u>ELET 270 Exam 1 Study Shortlist</u></div><a class="anchor-link" href="#ELET-270-Exam-1-Study-Shortlist">¶</a></h1>
 </div>
 </div>
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>The exam covers classes 1-7, notes 01-14, and homeworks 1-6. No calculators except for approved FE exam calculators. See <a href="https://ncees.org/exams/calculator/" target="_blank">here</a> for approved calculators. Closed notes, closed book.</p>
+<p>The exam covers classes 1-9, notes 01-13, and homeworks 1-6. No calculators except for approved FE exam calculators. See <a href="https://ncees.org/exams/calculator/" target="_blank">here</a> for approved calculators. Closed notes, closed book.</p>
 </div>
 </div>
 </div>
@@ -13174,13 +13174,6 @@ div#notebook {
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p>Know what a calibration is and the general steps you take to perform a calibration.</p>
-</div>
-</div>
-</div>
-<div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
-</div><div class="inner_cell">
-<div class="text_cell_render border-box-sizing rendered_html">
-<p>Know what a time constant is and how to find the time constant of a 1st order system subject to a step input.</p>
 </div>
 </div>
 </div>
