--- a/03.Python Primer.html
+++ b/03.Python Primer.html
@@ -14462,7 +14462,7 @@ Namespaces are one honking great idea -- let's do more of those!
 <div class="output_area">
 <div class="prompt"></div>
 <div class="output_subarea output_stream output_stdout output_text">
-<pre>{'cat', 'dog', 'fish'}
+<pre>{'dog', 'cat', 'fish'}
 </pre>
 </div>
 </div>
