--- a/00.Tentative Schedule.html
+++ b/00.Tentative Schedule.html
@@ -13095,8 +13095,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">2</td>
 <td style="text-align:center">F 3.12</td>
-<td style="text-align:left">Lab 1 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 1</td>
+<td style="text-align:left">Lab Equipment and Safety</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13116,8 +13116,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">5</td>
 <td style="text-align:center">F 3.19</td>
-<td style="text-align:left">Lab 2 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 2</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13137,8 +13137,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">8</td>
 <td style="text-align:center">F 3.26</td>
-<td style="text-align:left">Lab 3 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 3</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13165,8 +13165,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">12</td>
 <td style="text-align:center">F 4.9</td>
-<td style="text-align:left">Lab 4 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 4</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13186,8 +13186,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">15</td>
 <td style="text-align:center">F 4.16</td>
-<td style="text-align:left">Lab 5 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 5</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13207,8 +13207,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">18</td>
 <td style="text-align:center">F 4.23</td>
-<td style="text-align:left">Lab 6 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 6</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
@@ -13228,8 +13228,8 @@ div#notebook {
 <tr>
 <td style="text-align:center">21</td>
 <td style="text-align:center">F 4.30</td>
-<td style="text-align:left">Lab 7 - TBD</td>
-<td style="text-align:left"></td>
+<td style="text-align:left">Lab 7</td>
+<td style="text-align:left">TBD</td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
