--- a/00.Tentative Schedule.html
+++ b/00.Tentative Schedule.html
@@ -13096,7 +13096,7 @@ div#notebook {
 <td style="text-align:center">2</td>
 <td style="text-align:center">F 3.12</td>
 <td style="text-align:left">Lab 1</td>
-<td style="text-align:left">Lab Equipment and Safety</td>
+<td style="text-align:left"><a href="labs/Lab 1 - Lab Equipment and Safty.html" target="_blank">Lab Equipment and Safety</a></td>
 <td style="text-align:left"></td>
 </tr>
 <tr>
