Update Lab - Lab Equipment and Safety.html

--- a/labs/Lab - Lab Equipment and Safety.html
+++ b/labs/Lab - Lab Equipment and Safety.html
@@ -13159,7 +13159,7 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><b>Procedure 3:</b></p>
 <ol>
-<li>Review the <a href="Learning to Solder.pdf" target="_blank">Learning to Solder</a> presentation.</li>
+<li>Review the <a href="Learning To Solder.pdf" target="_blank">Learning To Solder</a> presentation.</li>
 <li>After having completed both procedure 1 and 2, and reviewed the Learning to Solder presentation, complete the <a href="https://forms.gle/x1DuYsgr6xf55kVz5" target="_blank">Lab Equipment and Safety quiz</a>.</li>
 </ol>
 </div>
